# halation

./: LICENSE  halation_bloom_guide.md
blha/: bun.lockb  package.json
blha/src-tauri/: Cargo.toml  tauri.conf.json
blha/src-tauri/src/: main.rs
g/: go.mod  halation  main.go
gui/: Cargo.toml
gui/src/: main.rs
imgs/: bulb.png.pp3  cars.png.pp3  test.png.pp3
od/: main.odin
r/: Cargo.toml
r/src/: main.rs
